--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "images/iconAp.png"
+  image_path: "lib/images/logo.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
@@ -61,7 +61,7 @@ flutter_launcher_icons:
     image_path: "path/to/image.png"
 
 flutter_native_splash:
-  image: images/bird.png
+  image: lib/images/bird.png
   color: #f9f9f9
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -83,7 +83,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
+    - lib/images/
     # - images/image1.jpg
 
   #   - images/a_dot_ham.jpeg
@@ -112,7 +112,7 @@ flutter:
     #       weight: 700
     - family: DancingScript
       fonts:
-        - asset: fonts/DancingScript-VariableFont_wght.ttf
+        - asset: lib/fonts/DancingScript-VariableFont_wght.ttf
 
   #
   # For details regarding fonts from package dependencies,
