--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   cupertino_icons: ^1.0.2
   faker: ^2.1.0
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
