--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   faker: ^2.1.0
   image_picker: ^1.0.4
+  firebase_core: ^2.19.0
+  firebase_auth: ^4.11.1
+  fluttertoast: ^8.2.2
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
